using broadcast services

--- a/app/views/partials/reset/index.jade
+++ b/app/views/partials/reset/index.jade
@@ -2,4 +2,4 @@ section.panel.password
   div.panel-inner
     h3 Reset your password by SMS
     p Enter the 6-digit code sent to your mobile *********70.
-    div(reset-form, data-code-data='codeData' data-check-code='checkCode()')
+    div(reset-form, data-code-data='codeData')
